C++-annotations (9.7.0) WIP

  * Added a section (classes/ambiguity) about Ambiguity Resolution.

  * Rewrote the section about lamba expressions

  * Repaired flaws in function names and return tyes of several sto* functions
    in string/convertors.yo 

  * `0b' constants are not part of the C++11 standard

  * In section references `C++11, 4.7' the `, 4.7' was dropped

  * intro/main.yo was updated


C++-annotations (9.6.0)

  * Updated the list of C++ keywords

  * Added advancedtemplates/noexcept.yo covering the noexcept keyword

  * Updated the string chapter

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 10 Jan 2013 20:23:05 +0100

C++-annotations (9.5.0)

  * Updated (to the current C++11 state) the reference of member functions of
    the Abstract Containers. 

  * Added a new section (Allocators) just before introducing the sequential
    containers. 

  * Rephrased sentenses like 'this member <verb>s' to '<verb>s', in particular
    in the chapter on Abstract Containers.

  * Repaired typos, reformulated the section about nested namespaces (Meir
    Shani). 

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Fri, 14 Dec 2012 12:53:53 +0100

C++-annotations (9.4.0)

  * Added new section make_shared in the stl chapter.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 28 Jun 2012 20:48:47 +0200

C++-annotations (9.3.0)

  * Coverage of the static_cast and reinterpret_cast was refined, following a
    suggestion provided by Gido Schoenmacker.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Tue, 06 Mar 2012 20:34:11 +0100

C++-annotations (9.2.1)

  * Starting this release all release tags (using names that are identical to
    the version number, so for this release the tag is 9.2.1) are signed to
    allow authentication.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 27 Feb 2012 13:42:38 +0100

9.2.0

  * Converted scanner generations from flex to flexc++

  * Rewrote the Concrete chapter's section about polymorphic semantic values
