@@ -18,8 +18,7 @@ the following algorithm is used:
     )
     The algorithm uses recursion to define the length of a tt(TypeList). In
 executable bf(C++) recursion could also be used in comparable situations. For
-example recursion can be used to determine the length of a plain bf(C)
-(ascii-Z) string:
+example recursion can be used to determine the length of an NTBS:
         verb(
     size_t c_length(char const *cp)
     {
