@@ -1,7 +1,7 @@
 At times (cf. section ref(TEMPLIST)) an empty
         hi(empty struct)hi(struct: empty)hi(NullType)
     tt(struct) is a useful tool. It can be used as a em(type) acting
-analogously to the ti(ASCII-Z) (final 0-byte) in bf(C)-strings.
+analogously to the final 0-byte in NTB-strings.
 It can simply be defined as:
         verb(
     struct NullType
