@@ -13,7 +13,7 @@ An example of a situation where tt(mutable) is appropriately used is found in
 the implementation of a string class. Consider the tt(std::string)'s tt(c_str)
 and tt(data) members. The actual data returned by the two members are
 identical, but tt(c_str) must ensure that the returned string is terminated by
-an ASCII-Z byte. As a string object has both a length and a capacity an easy
+an 0-byte. As a string object has both a length and a capacity an easy
 way to implement tt(c_str) is to ensure that the string's capacity exceeds its
 length by at least one character. This invariant allows tt(c_str) to be
 implemented as follows:
