@@ -1,5 +1,5 @@
     The standard bf(C) library offers conversion functions like ti(atoi),
-ti(atol), and other functions that can be used to convert tt(ASCII-Z) strings
+ti(atol), and other functions that can be used to convert NTB strings
 to numeric values. In bf(C++), these functions are still available, but a more
 em(type safe) way to convert text to other types uses objects of the class
  hi(istringstream)tt(std::istringsteam).
