@@ -36,9 +36,9 @@ tt(field) object, initialized in one of three different ways:
 
     The private member tt(setBuffer) defines a buffer of tt(d_width + 1)
 characters and uses tt(read) to fill the buffer with tt(d_width)
-characters. The buffer is terminated by an tt(ASCII-Z) character. This buffer
-is used to initialize the tt(d_iss) member. tt(Fistream)'s tt(rdbuf) member is
-used to extract the tt(d_str)'s data via the tt(Fistream) object itself:
+characters. The buffer is an NTBS. This buffer is used to initialize the
+tt(d_iss) member. tt(Fistream)'s tt(rdbuf) member is used to extract the
+tt(d_str)'s data via the tt(Fistream) object itself:
         verbinsert(SETBUFFER)(examples/fistream/fistream.cc)
 
     Although tt(setField) could be used to configure tt(Fistream) to use or
