@@ -27,9 +27,9 @@ example. It prints a well-known string and some marker text:
     it() At 2 the function ti(vsnprintf()) is given a buffer size of 0 and
 tt(0) as the pointer to the buffer. According to the ti(ISO/IEC 9899:1999)
 standard, the function tt(vsnprintf()) returns the number of required
-characters for the formatted string (not including the final emi(ASCII-Z)
-value) (see the tt(vsnprintf()) man page for details and possible alternative
-implementations of tt(vsnprintf())).
+characters for the formatted string (not including the final 0-valued
+character) (see the tt(vsnprintf()) man page for details and possible
+alternative implementations of tt(vsnprintf())).
     it() At 3 an ti(auto_ptr) is used to manage the dynamically
         hi(dynamic allocation) allocated buffer.
     it() At 4 the text is formatted.
