@@ -51,16 +51,16 @@ handler following a tt(try)-block is activated. Normally this is of no
 concern as each exception has its own unique type.
 
     Example: if exception handlers are defined for tt(char *)s and ti(void *)s
-then ASCII-Z strings are caught by the former handler. Note that a tt(char
+then NTB strings are caught by the former handler. Note that a tt(char
 *) can also be considered a tt(void *), but the exception type matching
 procedure is smart enough to use the tt(char *) handler with the thrown
-ASCII-Z string. Handlers should be designed very type specific to catch the
+NTBS. Handlers should be designed very type specific to catch the
 correspondingly typed exception. For example, tt(int)-exceptions are not
 caught by tt(double)-catchers, tt(char)-exceptions are not caught by
 tt(int)-catchers. Here is a little example illustrating that the order of the
 catchers is not important for types not having any hierarchal relationship to
 each other (i.e., tt(int) is not derived from tt(double); tt(string) is not
-derived from ASCII-Z):
+derived from an NTBS):
         verbinclude(examples/catchers.cc)
     Rather than defining specific exception handlers a specific class can be
 designed whose objects contain information about the exception. Such an
