@@ -1,6 +1,5 @@
-In bf(C++) string literals can be defined as ASCII-Z bf(C) strings.
-Prepending an ASCII-Z string by tt(L) (e.g., tt(L"hello")) defines a
-tt(wchar_t) string literal.
+In bf(C++) string literals can be defined as NTB strings.  Prepending an NTBS
+by tt(L) (e.g., tt(L"hello")) defines a tt(wchar_t) string literal.
 
 The new C++11 standard adds to this support for 8, 16 and 32 bit
 i(Unicode) encoded strings. Furthermore, two new data types are introduced:
