@@ -6,7 +6,7 @@
     {                                       // r/w the file
         fstream f("hello", ios::in | ios::out | ios::trunc);
 
-        f.write("hello", 6);                // write 2 ascii-z strings
+        f.write("hello", 6);                // write 2 NTB strings
         f.write("hello", 6);
 
         f.seekg(0, ios::beg);               // reset to begin of file
@@ -15,7 +15,7 @@
         char c;
                                             // read the first `hello'
         cout << f.get(buffer, sizeof(buffer), 0).tellg() << '\n';
-        f >> c;                             // read the ascii-z delim
+        f >> c;                             // read the NTB delim
 
                                             // and read the second `hello'
         cout << f.get(buffer + 6, sizeof(buffer) - 6, 0).tellg() << '\n';
