@@ -61,13 +61,13 @@ bytes long. Reading also stops when the delimiter tt(delim) is
 encountered. However, the delimiter itself is em(not removed) from the input
 stream.
 
-    Having stored the characters into tt(buffer), an ti(ASCII-Z) character is
+    Having stored the characters into tt(buffer), an 0-valued character is
 written beyond the last character stored into the tt(buffer).  The functions
 tt(eof) and tt(fail) (see section ref(IOSTATES)) return 0 (tt(false)) if the
 delimiter was encountered before reading tt(len - 1) characters or if the
 delimiter was not encountered after reading tt(len - 1) characters.
-It is OK to specifiy an tt(ASCII-Z) delimiter: this way strings
-terminating in tt(ASCII-Z) characters may be read from a (binary) file.
+It is OK to specifiy an 0-valued character delimiter: this way NTB strings
+may be read from a (binary) file.
         )
         ithtq(getline)
         (istream& getline(char *buffer, int len, char delim = '\n'))
