@@ -33,7 +33,7 @@ of the stream.)
     It is OK to
  hi(write beyond end of file)hi(seek beyond file boundaries)
     seek or write beyond the last file position.  Writing bytes to a location
-beyond endOfFile() will pad the intermediate bytes with i(ASCII-Z) values:
+beyond endOfFile() will pad the intermediate bytes with 0-valued bytes:
 i(null-bytes).
     Seeking before tt(ios::beg) raises the hi(fail)tt(ios::fail) flag.
         )
