@@ -93,8 +93,7 @@ order-number in the file. A emi(binary file) tt(index) allows for the quick
 retrieval of the location of lines.
         verbinclude(examples/readwrite.cc)
     Another example showing reading em(and) writing of files is provided by
-the next program. It also illustrates the processing of i(ASCII-Z) delimited
-strings:
+the next program. It also illustrates the processing of NTB strings:
         verbinclude(examples/asciiz.cc)
 
     A completely different way to read and write streams may be implemented
