@@ -25,7 +25,7 @@ following simple class tt(Person): hi(strdupnew)
     }
         )
     tt(Person)'s data members are initialized to zeroes or to copies of the
-ASCII-Z strings passed to tt(Person)'s constructor, using some variant of
+NTB strings passed to tt(Person)'s constructor, using some variant of
 ti(strdup). The allocated memory is eventually returned by tt(Person)'s
 destructor.
 
