@@ -45,8 +45,7 @@ won't compile?
 section ref(EXPLICIT), constructors expecting a single argument may be
 implicitly activated when an argument of an appropriate type is
 provided. We've encountered this repeatedly with tt(std::string) objects,
-where an tt(ASCII-Z) string may be used to initialize a tt(std::string)
-object.
+where an NTBS may be used to initialize a tt(std::string) object.
 
     Analogously, in statement tt(// 1), the tt(+) operator is called for the
 tt(b2) object. This operator expects another tt(Binary) object as its right
