@@ -28,7 +28,7 @@ of literal operators can be:
         binary constants (initial 0b), octal constants (initial 0) and
         hexadecimal constants (initial 0x);
     itt(long double). It is used as, e.g., tt(12.25_NM2km);
-    itt(char const *text). The tt(text) argument is an ASCII-Z string. It is
+    itt(char const *text). The tt(text) argument is an NTBS. It is
         used as, e.g., tt(1234_pental). The argument must em(not) be given
         double quotes, and must represent a numeric constant, as also expected
         by literal operators defining  tt(unsigned long long int)
