@@ -8,10 +8,10 @@ string offset positions. Example: when calling `tt(object.find('x'))' (see
 below) on a string object not containing the character tt('x'), tt(npos)
 is returned, as the requested position does not exist.
 
-The final 0-byte used in bf(C) strings to indicate the end of an ASCII-Z
-string is em(not) considered part of a bf(C++) string, and so the member
-function will return tt(npos), rather than tt(length()) when looking for 0 in
-a string object containing the characters of a bf(C) string.
+The final 0-byte used in bf(C) strings to indicate the end of an NTBS is
+em(not) considered part of a bf(C++) string, and so the member function will
+return tt(npos), rather than tt(length()) when looking for 0 in a string
+object containing the characters of a bf(C) string.
 
 Here are the standard functions that operate on objects of the class
 string. When a parameter of tt(size_t) is mentioned it may be interpreted as a
@@ -92,16 +92,16 @@ otherwise.
         tt(on) characters of the current string object starting at offset
         tt(opos) are compared to at most tt(an) characters of
         tt(argument). tt(Argument) must have at least tt(an) characters. The
-        characters may have arbitrary values: the ASCII-Z value has no special
-        meaning.)
+        characters may have arbitrary values: 0-valued characters have no
+        special meanings.)
     ithtq(copy)(size_t copy(char *argument, size_t on, size_type opos) const)
        (the contents of the current string object are (partially) copied into
         tt(argument). The actual number of characters copied is returned.  The
         second argument, specifying the number of characters to copy, from the
-        current string object is required. No ti(ASCII-Z) is appended to the
-        copied string but can be appended to the copied text using an
-        idiom like the following:
-        verb(
+        current string object is required. No 0-valued character is appended
+        to the copied string but can be appended to the copied text using an
+        idiom like the following: 
+       verb(
     argument[object.copy(argument, string::npos)] = 0;
         )
        Of course, the programmer should make sure that tt(argument)'s size is
@@ -113,11 +113,10 @@ otherwise.
        (a tt(const_reverse_iterator) referring to the begin of the current
         string object is returned.)
     ithtq(c_str)(char const *c_str() const)
-       (the contents of the current string object as an ASCII-Z terminated
-        bf(C)-string.)
+       (the contents of the current string object as an NTBS.)
     ithtq(data)(char const *data() const)
        (the raw contents of the current string object are returned. Since this
-        member does not return an ASCII-Z terminated bf(C) string (as
+        member does not return an NTBS (as
         tt(c_str) does), it can be used to retrieve any kind of information
         stored inside the current string object including, e.g., series of
         0-bytes:
