@@ -5,7 +5,7 @@ value of type hi(size_type)ti(string::size_type), which is (for all practical
 purposes) an (tt(unsigned)) tt(int).
 
 All tt(string) members accepting tt(string) objects as arguments also accept
-tt(char const *) (bf(C) ASCII-Z string) arguments. The same usually holds true
+tt(char const *) (NTBS) arguments. The same usually holds true
 for operators accepting tt(string) objects.
 
 Some tt(string)-members use em(iterators). Iterators are formally introduced
@@ -49,20 +49,19 @@ member functions (like tt(assign)) but a plain assignment operator (i.e.,
 tt(=))may also be used. Furthermore, assignment em(to) a character buffer is
 also supported.)
     ittq(conversions)
-        (the partial or complete contents of string objects may be
-interpreted as bf(C) strings but the string's contents may also be
-processed as a series of raw binary bytes, not necessarily terminating in an
-ASCII-Z byte. Furthermore, in many situations plain characters and bf(C)
-strings may be used where tt(std::string)s are accepted as well.)
+        (the partial or complete contents of string objects may be interpreted
+as bf(C) strings but the string's contents may also be processed as a series
+of raw binary bytes, not necessarily terminating in a 0-valued
+character. Furthermore, in many situations plain characters and bf(C) strings
+may be used where tt(std::string)s are accepted as well.)
     ittq(breakdown)
         (the individual characters stored in a string can be accessed
 using the familiar index operator (tt([])) allowing us to either access or
 modify information in the middle of a string.)
     ittq(comparisons)
-        (strings may be compared to other strings (or bf(C) ASCII-Z strings)
-using the familiar logical comparison operators tt(==, !=, <, <=, >) and
-tt(>=). There are also member functions available offering a more fine-grained
-comparison.)
+        (strings may be compared to other strings (NTB strings) using the
+familiar logical comparison operators tt(==, !=, <, <=, >) and tt(>=). There
+are also member functions available offering a more fine-grained comparison.)
     ittq(modification)
         (the contents of strings may be modified in many ways. Operators are
 available to add information to string objects, to insert information in
