@@ -4,15 +4,16 @@ em(generic algorithms) (see chapter ref(GENERIC)).
 
 Among the facilities bf(C++) programmers have developed over and over again
 are those manipulating chunks of text, commonly called em(strings). The bf(C)
-programming language offers rudimentary string support. bf(C)'s emi(ASCII-Z)
-terminated series of characters form the foundation upon which an enormous
-amount of code has been built+footnote(We define an
-    i(ASCII-Z string) as a series of ASCII-characters terminated by the
-ASCII-character zero (hence -Z), which has the value zero, and should not be
-confused with character ti('0'), which usually has the value ti(0x30)).
+programming language offers rudimentary string support. bf(C)'s emi(NTBS) is
+the foundation upon which an enormous amount of code has been
+built+footnote(Following the C++11 standard, an
+    em(NTBS) (null-terminated byte string, also emi(NTB string) is a character
+sequence whose highest-addressed element with defined content has the value
+zero (the terminating null character); no other character in the sequence has
+the value zero.).
 
 To process text bf(C++) offers a hi(string)tt(std::string) type. In bf(C++)
-the traditional bf(C) library functions manipulating ASCII-Z strings are
+the traditional bf(C) library functions manipulating NTB strings are
 deprecated in favor of using tt(string) objects. Many problems in bf(C)
 programs are caused by buffer overruns, boundary errors and allocation
 problems that can be traced back to improperly using these traditional bf(C)
