@@ -4,6 +4,9 @@ C++-annotations (9.7.0) WIP
 
   * Rewrote the section about lamba expressions
 
+  * Replaced references to `ascii-z string' by `null terminated byte string'
+    (NTBS), following the C++11 standard's terminology.
+
   * Repaired flaws in function names and return tyes of several sto* functions
     in string/convertors.yo 
 
